# message-db-hs

./: .gitignore  Justfile  cabal.project  flake.nix
message-db/: .gitignore  CHANGELOG.md  Justfile  README.md  message-db.cabal
message-db-migration/: CHANGELOG.md  Justfile  message-db-migration.cabal
message-db-migration/src/MessageDb/Migration/: Migrate.hs  V130Migration.hs
message-db/src/MessageDb/: Message.hs  Stream.hs  StreamCategory.hs  StreamIdentifier.hs
message-db/src/MessageDb/Db/: Decoders.hs  Encoders.hs  Sessions.hs  Statements.hs  Transactions.hs
message-db/test/: Generator.hs  Main.hs
message-db/test/Database/Postgres/Temp/: Tasty.hs
message-db/test/Generators/: Aeson.hs  Ranges.hs  UUID.hs
message-db/test/Internal/: GeneratorSpec.hs
message-db/test/MessageDb/: StreamCategorySpec.hs  StreamIdentifierSpec.hs  StreamSpec.hs
message-db/test/MessageDb/Db/: DbSpec.hs  TastySetup.hs
