cabal-version:   3.4
name:            message-db-migration
version:         0.1.0.0
synopsis:        Install message-db

-- description:
license:         MIT
license-file:    LICENSE
author:          Nadeem Bitar
maintainer:      nadeem@gmail.com

-- copyright:
category:        Database
build-type:      Simple
extra-doc-files: CHANGELOG.md

extra-source-files:
 database/**/*.sql

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies

library
  import:           warnings
  exposed-modules:  
   MessageDb.Migration.V130Migration
   MessageDb.Migration.Migrate

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base               ^>=4.17.0.0
    , bytestring         ^>=0.11
    , file-embed         ^>=0.0.15
    , filepath           ^>=1.4.2
    , hasql              ^>=1.6.3
    , hasql-transaction  ^>=1.0.1

  hs-source-dirs:   src
  default-language: GHC2021

executable message-db-migration
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base                  ^>=4.17.0.0
    , message-db-migration

  hs-source-dirs:   app
  default-language: GHC2021

test-suite message-db-migration-test
  import:           warnings
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base                  ^>=4.17.0.0
    , message-db-migration
