cabal-version:   3.4
name:            message-db
version:         0.1.0.0
synopsis:        message-dbkj
license:         MIT
license-file:    LICENSE
author:          Nadeem Bitar
maintainer:      nadeem@gmail.com
extra-doc-files: CHANGELOG.md

common common-options
  build-depends:      base ^>=4.17.0.0
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies

  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    DuplicateRecordFields
    OverloadedLabels
    OverloadedStrings

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

library
  import:           common-options
  exposed-modules:
    MessageDb.Db.Decoders
    MessageDb.Db.Encoders
    MessageDb.Db.Statements
    MessageDb.Message
    MessageDb.Stream

  -- other-modules:

  build-depends:
    , aeson         ^>=2.1.0.0
    , generic-lens  ^>=2.2.1.0
    , hasql         ^>=1.6.3
    , lens          ^>=5.2
    , text          ^>=2.0.1
    , time          ^>=1.12.2
    , uuid          ^>=1.3.15
    , vector        ^>=0.13.0

  hs-source-dirs:   src
  default-language: GHC2021

test-suite message-db-test
  import:           common-options
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:    message-db
