cabal-version:   3.4
name:            message-db
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      nadeem@gmail.com
author:          Nadeem Bitar
synopsis:        message-db
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        MessageDb.Db.Decoders
        MessageDb.Db.Encoders
        MessageDb.Db.Statements
        MessageDb.Message
        MessageDb.Stream

    hs-source-dirs:     src
    default-language:   GHC2021
    default-extensions:
        DerivingStrategies DuplicateRecordFields OverloadedLabels
        OverloadedStrings

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wredundant-constraints
        -fhide-source-paths -Wmissing-export-lists -Wpartial-fields
        -Wmissing-deriving-strategies

    build-depends:
        aeson ^>=2.1.0.0,
        base ^>=4.17.0.0,
        generic-lens ^>=2.2.1.0,
        hasql ^>=1.6.3,
        lens ^>=5.2,
        text ^>=2.0.1,
        time ^>=1.12.2,
        uuid ^>=1.3.15,
        vector ^>=0.13.0

test-suite message-db-test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    other-modules:
        Generator
        Generators.Aeson
        Generators.Ranges
        MessageDb.StreamSpec

    default-language:   GHC2021
    default-extensions:
        DerivingStrategies DuplicateRecordFields OverloadedLabels
        OverloadedStrings

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wredundant-constraints
        -fhide-source-paths -Wmissing-export-lists -Wpartial-fields
        -Wmissing-deriving-strategies -threaded -rtsopts 
        -with-rtsopts=-N


    build-depends:
        aeson ^>=2.1.0,
        base ^>=4.17.0.0,
        hedgehog,
        message-db,
        scientific ^>=0.3.7,
        tasty ^>=1.4,
        tasty-autocollect ^>=0.4,
        tasty-hedgehog ^>=1.4,
        tasty-hspec ^>=1.2,
        text ^>=2.0.1,
        vector ^>=0.13.0
