cabal-version:   3.4
name:            message-db
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      nadeem@gmail.com
author:          Nadeem Bitar
synopsis:        message-db
extra-doc-files: CHANGELOG.md

library
  exposed-modules:
    MessageDb.Db.Decoders
    MessageDb.Db.Encoders
    MessageDb.Db.Sessions
    MessageDb.Db.Statements
    MessageDb.Db.Transactions
    MessageDb.Message
    MessageDb.Stream
    MessageDb.StreamIdentifier
    MessageDb.StreamCategory

  hs-source-dirs:     src
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    DuplicateRecordFields
    OverloadedLabels
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies

  build-depends:
    , aeson              ^>=2.1.0.0
    , base               ^>=4.17.0.0
    , generic-lens       ^>=2.2.1.0
    , hasql              ^>=1.6.3
    , hasql-transaction  ^>=1.0.1
    , lens               ^>=5.2
    , text               ^>=2.0.1
    , time               ^>=1.12.2
    , uuid               ^>=1.3.15
    , vector             ^>=0.13.0

test-suite message-db-test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  other-modules:
    Database.Postgres.Temp.Tasty
    Generator
    Generators.Aeson
    Generators.Ranges
    Generators.UUID
    MessageDb.Db.DbSpec
    MessageDb.Db.TastySetup
    MessageDb.StreamSpec
    MessageDb.StreamIdentifierSpec
    Internal.GeneratorSpec

  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    DuplicateRecordFields
    OverloadedLabels
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies -threaded -rtsopts -with-rtsopts=-N

  build-depends:
    , aeson                 ^>=2.1.0
    , base                  ^>=4.17.0.0
    , bytestring            ^>=0.11
    , filepath              ^>=1.4.2
    , hasql                 ^>=1.6.3
    , hasql-pool            ^>=0.8
    , hasql-transaction     ^>=1.0.1
    , hedgehog
    , lens                  ^>=5.2
    , message-db
    , message-db-migration
    , postgres-options
    , scientific            ^>=0.3.7
    , tasty                 ^>=1.4
    , tasty-autocollect     ^>=0.4
    , tasty-hedgehog        ^>=1.4
    , tasty-hspec           ^>=1.2
    , tasty-hunit
    , text                  ^>=2.0.1
    , tmp-postgres          ^>=1.34
    , uuid                  ^>=1.3.15
    , vector                ^>=0.13.0
